--- a/funnel_physics.ipynb
+++ b/funnel_physics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 703,
    "id": "07333543",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 704,
    "id": "9df61da6",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
+   "execution_count": 705,
    "id": "9e4d48b4",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 706,
    "id": "7b9db6ed",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 707,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,17 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 708,
    "id": "1205b528",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x28857e45250>]"
+       "[<matplotlib.lines.Line2D at 0x28857f35280>]"
       ]
      },
-     "execution_count": 700,
+     "execution_count": 708,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": 709,
    "id": "84eca358",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 710,
    "metadata": {},
    "outputs": [
     {
@@ -213,6 +213,16 @@
     "\n",
     "plt.grid()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93b69714",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test git"
    ]
   }
  ],
