first vector implementation for movements

--- a/funnel_physics.ipynb
+++ b/funnel_physics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 833,
    "id": "07333543",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 704,
+   "execution_count": 834,
    "id": "9df61da6",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 835,
    "id": "9e4d48b4",
    "metadata": {},
    "outputs": [],
@@ -85,14 +85,37 @@
     "        self.x = MovementPhysics1D(x_acc, x_vel, x_loc, bounce_cor)\n",
     "        self.y = MovementPhysics1D(y_acc, y_vel, y_loc, bounce_cor)\n",
     "        self.z = MovementPhysics1D(z_acc, z_vel, z_loc, bounce_cor)\n",
+    "        self.loc = np.array([[self.x.loc], [self.y.loc], [self.z.loc]])\n",
+    "        self.vel = np.array([[self.x.vel], [self.y.vel], [self.z.vel]])\n",
+    "        self.acc = np.array([[self.x.acc], [self.y.acc], [self.z.acc]])\n",
     "\n",
-    "    # ToDo vector stuff\n",
+    "    def update_without_collision(self, dt):\n",
+    "        self.loc = np.array([\n",
+    "            [self.x.update_loc_without_collision(dt)],\n",
+    "            [self.y.update_loc_without_collision(dt)],\n",
+    "            [self.z.update_loc_without_collision(dt)]\n",
+    "        ])\n",
+    "        self.vel = np.array([[self.x.vel], [self.y.vel], [self.z.vel]])\n",
+    "        self.acc = np.array([[self.x.acc], [self.y.acc], [self.z.acc]])\n",
+    "\n",
+    "        return self.loc\n",
+    "        \n",
+    "    def update(self, dt, boundary):\n",
+    "        self.loc = np.array([\n",
+    "            [self.x.update_loc_without_collision(dt)],\n",
+    "            [self.y.update_loc_without_collision(dt)],\n",
+    "            [self.z.update_loc(dt, boundary)]\n",
+    "        ])\n",
+    "        self.vel = np.array([[self.x.vel], [self.y.vel], [self.z.vel]])\n",
+    "        self.acc = np.array([[self.x.acc], [self.y.acc], [self.z.acc]])\n",
+    "\n",
+    "        return self.loc\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 706,
+   "execution_count": 836,
    "id": "7b9db6ed",
    "metadata": {},
    "outputs": [],
@@ -100,12 +123,14 @@
     "class Boundary():\n",
     "    \n",
     "    def __init__(self, z) -> None:\n",
-    "        self.z = z"
+    "        self.z = z\n",
+    "        #starting point\n",
+    "        #vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 837,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 708,
-   "id": "1205b528",
+   "execution_count": 838,
+   "id": "fd9b939f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x28857f35280>]"
+       "[<matplotlib.lines.Line2D at 0x2885b79df40>]"
       ]
      },
-     "execution_count": 708,
+     "execution_count": 838,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -144,43 +169,37 @@
     }
    ],
    "source": [
-    "z_loc_history = np.empty((1,0))\n",
-    "x_loc_history = np.empty((1,0))\n",
-    "y_loc_history = np.empty((1,0))\n",
+    "loc_history = np.empty((3,0))\n",
     "\n",
     "\n",
     "ball = SimulationObject(z_loc=100, x_vel=10, x_acc= 1, y_vel=20, bounce_cor=0.7)\n",
     "floor = Boundary(0)\n",
     "\n",
     "while(ball.z.collision_counter<collisions):\n",
-    "        loc_now = ball.z.update_loc(dt, boundary=floor)\n",
-    "        z_loc_history = np.append(z_loc_history, loc_now)\n",
-    "        loc_now = ball.x.update_loc_without_collision(dt)\n",
-    "        x_loc_history = np.append(x_loc_history, loc_now)\n",
-    "        loc_now = ball.y.update_loc_without_collision(dt)\n",
-    "        y_loc_history = np.append(y_loc_history, loc_now)\n",
+    "        loc_now = ball.update(dt, boundary=floor)\n",
+    "        loc_history = np.concatenate((loc_history, loc_now), axis=1) # ToDo understand concatenate axis better\n",
     "\n",
-    "td_acc_history = np.arange(0, len(z_loc_history))*dt\n",
+    "td_acc_history = np.arange(0, len(loc_history[2]))*dt\n",
     "\n",
-    "plt.plot(td_acc_history, z_loc_history)"
+    "plt.plot(td_acc_history, loc_history[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 839,
    "id": "84eca358",
    "metadata": {},
    "outputs": [],
    "source": [
     "#ToDo\n",
+    "# boundary class as vector\n",
     "# funnel\n",
-    "# vector format\n",
     "# animate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 840,
    "metadata": {},
    "outputs": [
     {
@@ -200,29 +219,19 @@
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(projection='3d')\n",
     "\n",
-    "scat = ax.plot3D(x_loc_history, y_loc_history ,z_loc_history)\n",
+    "scat = ax.plot3D(loc_history[0], loc_history[1] ,loc_history[2])\n",
     "\n",
     "# Create cubic bounding box to simulate equal aspect ratio, since matplotlib3d does not support aspect=equal\n",
-    "max_range = np.array([x_loc_history.max()-x_loc_history.min(), y_loc_history.max()-y_loc_history.min(), z_loc_history.max()-z_loc_history.min()]).max()\n",
-    "Xb = 0.5*max_range*np.mgrid[-1:2:2,-1:2:2,-1:2:2][0].flatten() + 0.5*(x_loc_history.max()+x_loc_history.min())\n",
-    "Yb = 0.5*max_range*np.mgrid[-1:2:2,-1:2:2,-1:2:2][1].flatten() + 0.5*(y_loc_history.max()+y_loc_history.min())\n",
-    "Zb = 0.5*max_range*np.mgrid[-1:2:2,-1:2:2,-1:2:2][2].flatten() + 0.5*(z_loc_history.max()+z_loc_history.min())\n",
+    "max_range = np.array([loc_history[0].max()-loc_history[0].min(), loc_history[1].max()-loc_history[1].min(), loc_history[2].max()-loc_history[2].min()]).max()\n",
+    "Xb = 0.5*max_range*np.mgrid[-1:2:2,-1:2:2,-1:2:2][0].flatten() + 0.5*(loc_history[0].max()+loc_history[0].min())\n",
+    "Yb = 0.5*max_range*np.mgrid[-1:2:2,-1:2:2,-1:2:2][1].flatten() + 0.5*(loc_history[1].max()+loc_history[1].min())\n",
+    "Zb = 0.5*max_range*np.mgrid[-1:2:2,-1:2:2,-1:2:2][2].flatten() + 0.5*(loc_history[2].max()+loc_history[2].min())\n",
     "\n",
     "for xb, yb, zb in zip(Xb, Yb, Zb):\n",
     "   ax.plot([xb], [yb], [zb], 'w')\n",
     "\n",
     "plt.grid()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93b69714",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#test git"
    ]
   }
  ],
