major 2D precision and logic improvements

--- a/funnel_physics.ipynb
+++ b/funnel_physics.ipynb
@@ -39,7 +39,6 @@
     "        self.vel =  self.acc * dt + self.vel\n",
     "        return self.vel\n",
     "\n",
-    "\n",
     "    def update_loc(self, dt):\n",
     "        self.loc = 0.5 * self.acc * np.power(dt,2) + self.vel * dt + self.loc\n",
     "        return self.loc\n",
@@ -57,44 +56,56 @@
     "        \n",
     "        for key in list(set(obstacles) - set(self.collision_counter)): # match collision_counter dict with obstacles dict\n",
     "            self.collision_counter[key] = 0\n",
+    "\n",
+    "        if len(self.vel) == 2: # 2D\n",
+    "\n",
+    "            for obstacle in obstacles: # naiv approach that only one obstacle can get hit\n",
+    "                obstacle_instance = obstacles[obstacle][0] # get obstacle instance out of obstacle tuple (obstacle_instance, color)\n",
     "            \n",
-    "        for obstacle in obstacles: # naiv approach that only one obstacle can get hit\n",
-    "            \n",
-    "            obstacle_instance = obstacles[obstacle][0] # get obstacle instance out of obstacle tuple (obstacle_instance, color)\n",
-    "            \n",
-    "            intersection = self.solve_intersection(obstacle_instance.point_0, obstacle_instance.point_1, prev_loc, self.loc)\n",
+    "                intersection = self.solve_intersection(obstacle_instance.point_0, obstacle_instance.point_1, prev_loc, self.loc) # euler method linear\n",
     "\n",
-    "            if self.is_collision(intersection[1], intersection[2]):\n",
+    "                if self.is_collision(intersection[1], intersection[2]):\n",
+    "                    self.collision_counter[obstacle] += 1\n",
+    "                    #print(str(obstacle) + \" collision counter: \" + str(self.collision_counter[obstacle]))\n",
+    "                    dt_collision = intersection[2] * dt # collision time\n",
+    "                    self.vel = prev_vel # reset\n",
+    "                    self.loc = prev_loc # reset\n",
+    "                    self.update_vel(dt_collision)\n",
+    "                    self.loc = intersection[0] # set location to collision point\n",
+    "                    #print(\"Loc of collision: \" + str(self.loc))\n",
+    "                    #print(\"Vel of collision: \" + str(self.vel))\n",
+    "                    #print(\"t1,t2: \" + str((intersection[1], intersection[2])))\n",
+    "                    self.reflect_vel(obstacle_instance)\n",
+    "                    #print(\"Reflected Vel of collision: \" + str(self.vel))\n",
+    "                    self.vel = self.vel * self.bounce_cor # bounce losses\n",
+    "                    #self.update_vel(dt-dt_collision)\n",
+    "                    #self.update_loc(dt-dt_collision)\n",
+    "                    self.update(dt-dt_collision, obstacles) # if it runs into problems tweak paramater in is_collision()\n",
+    "\n",
+    "                    break # naiv approach only support single collision\n",
+    "\n",
+    "        elif len(self.vel) == 3: # TODO 3D -> not working yet!\n",
+    "\n",
+    "            for obstacle in obstacles: # naiv approach that only one obstacle can get hit\n",
+    "                obstacle_instance = obstacles[obstacle][0] # get obstacle instance out of obstacle tuple (obstacle_instance, color)\n",
+    "\n",
+    "                # TODO intersection with time and point of intersection in 3D\n",
     "                \n",
-    "                dt_collision = intersection[2] * dt\n",
-    "                self.vel = prev_vel # reset\n",
-    "                self.loc = prev_loc # reset\n",
-    "                self.update_vel(dt_collision)\n",
-    "                self.loc = intersection[0]\n",
-    "                \n",
-    "                if len(self.vel) == 2: # 2D\n",
-    "                    help_z = np.array([0, 0, 1])\n",
-    "                    obstacle_orthogonal = np.cross(obstacle_instance.point_1 - obstacle_instance.point_0, help_z)\n",
-    "                    obstacle_orthogonal = np.array([obstacle_orthogonal[0], obstacle_orthogonal[1]]) # drop z\n",
-    "                else: # 3D\n",
-    "                    print(\"implement plane here\") # TODO\n",
+    "                if self.is_collision(intersection[1], intersection[2]): # is collision\n",
+    "                    self.collision_counter[obstacle] += 1\n",
+    "                    dt_collision = intersection[2] * dt # collision time\n",
+    "                    self.vel = prev_vel # reset\n",
+    "                    self.loc = prev_loc # reset\n",
+    "                    self.update_vel(dt_collision)\n",
+    "                    self.loc = intersection[0]\n",
+    "                    self.reflect_vel(obstacle_instance) # TODO implement in 3D\n",
+    "                    self.vel = self.vel * self.bounce_cor # bounce losses\n",
+    "                    #self.update(dt-dt_collision, obstacles) # update with remaining time\n",
+    "                    break # naiv approach only support single collision\n",
     "\n",
+    "        else:\n",
+    "            print(\"Only 2 or 3 D cases supported!\")\n",
     "\n",
-    "                self.vel = self.vel - 2 * (np.dot(self.vel, obstacle_orthogonal))/(np.dot(obstacle_orthogonal, obstacle_orthogonal)) * obstacle_orthogonal # bounce = reflect velocity https://www.youtube.com/watch?v=naaeH1qbjdQ&ab_channel=TheCodingTrain\n",
-    "                self.vel = self.vel * self.bounce_cor # bounce losses\n",
-    "                self.update_vel(dt-dt_collision)\n",
-    "                self.update_loc(dt-dt_collision)\n",
-    "\n",
-    "                \"\"\"\n",
-    "                if self.vel < 0: # ball has not enough energy cross border\n",
-    "                    self.vel = 0\n",
-    "                    self.loc = obstacle.z\n",
-    "                \"\"\"\n",
-    "                \n",
-    "                self.collision_counter[obstacle] += 1\n",
-    "\n",
-    "                return self\n",
-    "                \n",
     "        return self\n",
     "\n",
     "    def solve_intersection(self, a, b, c, d):\n",
@@ -169,7 +180,15 @@
     "            return (a + ab * t1, t1, t2) # point of intersection, t1, t2\n",
     "\n",
     "    def is_collision(self, t1, t2):\n",
-    "        return 0 < t1 <= 1 and 0 < t2 <= 1"
+    "        tweak_me = 1.e-10 # loc is on obstacle after collision, to not count it twice this has to be as close as possible to 0 but not 0 (see solve_intersection())\n",
+    "        return 0 <= t1 <= 1 and tweak_me < t2 <= 1\n",
+    "\n",
+    "    def reflect_vel(self, obstacle_instance):\n",
+    "        obstacle = obstacle_instance.point_1 - obstacle_instance.point_0\n",
+    "        obstacle_orthogonal = np.array([obstacle[1], -obstacle[0]]) # in 2D [x,y] -> clockwise: [y,-x] / cclockwise: [-y,x]\n",
+    "        self.vel = self.vel - 2 * (np.dot(self.vel, obstacle_orthogonal))/(np.dot(obstacle_orthogonal, obstacle_orthogonal)) * obstacle_orthogonal # bounce = reflect velocity https://www.youtube.com/watch?v=naaeH1qbjdQ&ab_channel=TheCodingTrain\n",
+    "\n",
+    "        return self.vel\n"
    ]
   },
   {
@@ -181,10 +200,12 @@
    "source": [
     "class Obstacle():\n",
     "    \n",
-    "    def __init__(self, point_1, point_2) -> None:\n",
-    "        self.point_0 = np.array(point_1)\n",
-    "        self.point_1 = np.array(point_2)\n",
-    "        # later on planes\n"
+    "    def __init__(self, point_0, point_1, point_2=0) -> None:\n",
+    "        self.point_0 = np.array(point_0)\n",
+    "        self.point_1 = np.array(point_1)\n",
+    "        self.point_2 = np.array(point_2) # optional for planes\n",
+    "        #self.orthogonal =  np.array()\n",
+    "\n"
    ]
   },
   {
@@ -201,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "fd9b939f",
    "metadata": {
     "scrolled": true
@@ -210,7 +231,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dee71e2528324ef598c7a8922c0e90e6",
+       "model_id": "b2c278dd5bf34571a0619844620f98f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,6 +255,7 @@
     }
    ],
    "source": [
+    "# 2D\n",
     "loc_history = np.empty((2,0))\n",
     "\n",
     "ball = SimulationObject(acc=(0,gravity), vel=(25,0), loc=(0,200), bounce_cor=0.9)\n",
@@ -257,7 +279,7 @@
     "while(True): # do while loop\n",
     "        ball.update(dt, obstacles=obstacles)\n",
     "        loc_history = np.concatenate((loc_history, np.vstack(ball.loc)), axis=1) # ToDo understand concatenate axis better\n",
-    "        if not (ball.collision_counter[\"floor\"] == 0): break # condition for do while loop\n",
+    "        if (ball.collision_counter[\"floor\"] == 1): break # condition for do while loop\n",
     "            \n",
     "#td_acc_history = np.arange(0, len(loc_history[1]))*dt # recreates time list\n",
     "#plt.plot(td_acc_history, loc_history[1]) # plots curve over time not x\n",
@@ -276,13 +298,86 @@
     "    return ax\n",
     "\n",
     "anim = FuncAnimation(fig, animate, frames=len(loc_history[0])+1, interval=dt*1000, repeat=False)\n",
-    "#anim.save('funnel2D_video.mp4', fps = fps, extra_args = ['-vcodec', 'libx264'])\n",
-    "plt.show()\n"
+    "#anim.save('funnel2D_1_video.mp4', fps = fps, extra_args = ['-vcodec', 'libx264'])\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "4ae4a7b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'intersection' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-0d344e642e62>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;32mwhile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m# do while loop\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mball\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mobstacles\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mobstacles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m         \u001b[0mloc_history\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloc_history\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mball\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# ToDo understand concatenate axis better\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mball\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcollision_counter\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"floor\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mbreak\u001b[0m \u001b[1;31m# condition for do while loop\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-6b32a02c5704>\u001b[0m in \u001b[0;36mupdate\u001b[1;34m(self, dt, obstacles)\u001b[0m\n\u001b[0;32m     64\u001b[0m                 \u001b[1;31m# TODO intersection with time and point of intersection in 3D\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 66\u001b[1;33m                 \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_collision\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mintersection\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mintersection\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m# is collision\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     67\u001b[0m                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcollision_counter\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mobstacle\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m                     \u001b[0mdt_collision\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mintersection\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mdt\u001b[0m \u001b[1;31m# collision time\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'intersection' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# 3D -> TODO\n",
+    "loc_history = np.empty((3,0))\n",
+    "\n",
+    "ball = SimulationObject(acc=(0,0,gravity), vel=(25,0,0), loc=(0,0,200), bounce_cor=0.9)\n",
+    "\n",
+    "obstacles = {\n",
+    "        # (obstacle instance, color)\n",
+    "        \"floor\" : (Obstacle((0,0,0), (1,0,0), (0,1,0)), \"k\"),\n",
+    "}\n",
+    "\n",
+    "while(True): # do while loop\n",
+    "        ball.update(dt, obstacles=obstacles)\n",
+    "        loc_history = np.concatenate((loc_history, np.vstack(ball.loc)), axis=1) # ToDo understand concatenate axis better\n",
+    "        if not (ball.collision_counter[\"floor\"] == 0): break # condition for do while loop\n",
+    "            \n",
+    "fig, ax = plt.subplots(projection='3d')\n",
+    "\n",
+    "# Create cubic bounding box to simulate equal aspect ratio, since matplotlib3d does not support aspect=equal\n",
+    "max_range = np.array([loc_history[0].max()-loc_history[0].min(), loc_history[1].max()-loc_history[1].min(), loc_history[2].max()-loc_history[2].min()]).max()\n",
+    "Xb = 0.5*max_range*np.mgrid[-1:2:2,-1:2:2,-1:2:2][0].flatten() + 0.5*(loc_history[0].max()+loc_history[0].min())\n",
+    "Yb = 0.5*max_range*np.mgrid[-1:2:2,-1:2:2,-1:2:2][1].flatten() + 0.5*(loc_history[1].max()+loc_history[1].min())\n",
+    "Zb = 0.5*max_range*np.mgrid[-1:2:2,-1:2:2,-1:2:2][2].flatten() + 0.5*(loc_history[2].max()+loc_history[2].min())\n",
+    "\n",
+    "for xb, yb, zb in zip(Xb, Yb, Zb):\n",
+    "   ax.plot([xb], [yb], [zb], 'w')\n",
+    "\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((3,3))\n",
+    "#np.concatenate((np.ones((3,3)), np.vstack(np.ones((3,1)))), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "84eca358",
    "metadata": {},
    "outputs": [],
@@ -295,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9e539264",
    "metadata": {},
    "outputs": [
@@ -311,7 +406,6 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(projection='3d')\n",
     "\n",
@@ -327,8 +421,7 @@
     "   ax.plot([xb], [yb], [zb], 'w')\n",
     "\n",
     "plt.grid()\n",
-    "plt.show()\n",
-    "\"\"\""
+    "plt.show()"
    ]
   }
  ],
